--- a/lib/interface/bobot_web/live/apis.html.heex
+++ b/lib/interface/bobot_web/live/apis.html.heex
@@ -35,7 +35,7 @@
 
     <.small_button :if={@current_api != nil}
       class="float-right" type="button" phx-click="view-api" icon="credit-card-solid">
-      View API
+      Edit 
     </.small_button>
 
     <.small_button :if={@current_api != nil}
