--- a/lib/interface/bobot_web/live/home.html.heex
+++ b/lib/interface/bobot_web/live/home.html.heex
@@ -6,17 +6,20 @@
   </.tiny_logo>
 
   <.small_button 
-    class="ml-auto float-right" type="button" onclick="location.href='/bots'" icon="wrench-mini">
+    class="ml-auto float-right" type="button" onclick="location.href='/bots'" 
+    icon="wrench-mini" keyb="F9">
     Bots
   </.small_button>
 
   <.small_button 
-    class="float-right" type="button" onclick="location.href='/apis'" icon="arrows-right-left">
+    class="float-right" type="button" onclick="location.href='/apis'" 
+    icon="arrows-right-left" keyb="F10">
     APIs
   </.small_button>
 
   <.small_button 
-    class="float-right" type="button" onclick="location.href='/libs'" icon="arrows-right-left">
+    class="float-right" type="button" onclick="location.href='/libs'" 
+    icon="book-open" keyb="F11">
     Libs
   </.small_button>
 
