--- a/lib/interface/bobot_web/live/apis.html.heex
+++ b/lib/interface/bobot_web/live/apis.html.heex
@@ -19,7 +19,7 @@
       name="api_name" 
       options={@apis |> Map.keys()}
       value={@current_api[:name]} small={true}
-      class="!bg-purple-100 !rounded"/>
+      class="!bg-purple-100 !rounded" container-class="bg-purple-800 py-4 px-2"/>
     </form>
 
     <.small_button :if={@current_api == nil} value="modal:New API..."
@@ -49,61 +49,4 @@
   <.bg_logo/>
 </main>
 
-<dialog :if={@modal[:template]} class="bg-gray-100 dark:bg-gray-700 text-700 dark:text-100 before:bg-purple-800 before:text-white" id="modal" data-title={@modal[:title]}>
-  <.icon class="close cursor-pointer" name="hero-x-mark-mini" onclick="modal.close()"/>
-  <%= 
-  if get_in(@modal, [:template]) do 
-    %{module: module, sentency: sentency} = @modal[:template]
-    apply(module, :show, [sentency, assigns]) 
-  end
-  %>
-</dialog>
-
-<dialog id="bobot_editor" phx-update="ignore"  data-title="" 
-  class="relative px-0 pb-0 pt-8 before:bg-purple-800 before:font-mono before:text-xs">
-  <form phx-submit="operation-editor" onsubmit="block_text.value = editor.getValue().trim()">
-    <!-- editing mode -->
-    <.icon_button type="submit" onclick="editor_set_operation(event, 'commit')" 
-      class="commit editing absolute top-1 right-8 text-white" icon="folder-arrow-down-solid" 
-      title="Comit changes (CTRL + click close window)"/>
-    <.icon_button type="submit" onclick="editor_set_operation(event, 'cancel')" 
-      class="cancel editing absolute top-1 right-2 text-white" icon="x-mark-mini" 
-      title="CTRL + click to close without save"/>
-    <!-- readonly mode -->
-    <.icon_button type="button" onclick="editor_set_readonly(false)" 
-      class="reading absolute top-1 right-8 text-white" icon="pencil-solid" icon-size="3"
-      title="Change to editing mode"/>
-    <.icon_button type="button" onclick="bobot_editor.close()"
-      class="cancel reading absolute top-1 right-2 text-white" icon="x-mark-mini"/>
-
-    <.input_hidden name="block_text" value=""/>
-    <.input_hidden name="operation" value=""/>
-    <.input_hidden name="ctrl" value=""/>
-
-    <div id="bobot-editor-text"></div>
-    <div id="editor-status-bar" class="editor-status-bar text-right px-2 text-xs bg-purple-800 text-white">
-      <div class="info float-left"></div>
-    </div>
-  </form>
-</dialog>
-
-<dialog id="box_confirm_action" phx-update="ignore" data-title="Please confirm..." 
-  class="relative px-0 pb-0 pt-8 before:bg-purple-800 before:text-xs">
-  <form phx-submit="confirmed-action">
-    <.input_hidden name="action" value=""/>
-    <div class="grid mb-5 grid grid-cols-2">
-      <div id="message" class="w-64 text-center col-span-2 text-xs p-2 mb-2 px-4"></div>
-      <div class="text-center">
-        <.small_button class="w-24 place-content-center bg-gray-700" icon="x-circle-solid" 
-          type="button" onclick="box_confirm_action.close()">
-          Cancel
-        </.small_button>
-      </div>
-      <div class="text-center">
-        <.small_button class="w-24 bg-red-700" icon="hand-thumb-up-solid" type="submit">
-          Confirm
-        </.small_button>
-      </div>
-    </div>
-  </form>
-</dialog>
+<%= include("static", assigns) %>
