--- a/lib/interface/bobot_web/live/templates/static.html.heex
+++ b/lib/interface/bobot_web/live/templates/static.html.heex
@@ -19,8 +19,8 @@
       class="cancel editing absolute top-1 right-2 text-white" icon="x-mark-mini" 
       title="CTRL + click to close without save"/>
     <!-- readonly mode -->
-    <.icon_button type="button" onclick="editor_set_readonly(false)" 
-      class="reading absolute top-1 right-8 text-white" icon="pencil-solid" icon-size="3"
+    <.icon_button type="button" onclick="editor_set_readonly(false)" keyb="F4" keyb-hide
+      class="reading !absolute top-1 right-8 text-white" icon="pencil-solid" icon-size="3"
       title="Change to editing mode"/>
     <.icon_button type="button" onclick="bobot_editor.close()"
       class="cancel reading absolute top-1 right-2 text-white" icon="x-mark-mini"/>
