--- a/lib/interface/bobot_web/live/home.html.heex
+++ b/lib/interface/bobot_web/live/home.html.heex
@@ -8,7 +8,7 @@
   <.small_button form="form" type="submit" 
     class={[@changed && "animate-color" || "", "ml-auto float-right"]} 
     icon="folder-arrow-down-solid"  keyb="F2">
-    Save
+    Commit
   </.small_button>
 
   <.small_button 
