--- a/lib/interface/bobot_web/live/bots.html.heex
+++ b/lib/interface/bobot_web/live/bots.html.heex
@@ -17,7 +17,7 @@
     <form phx-change="select-bot">
     <.select :if={@current_bot == nil} inline={true} label="Select Bot" keyb="F2"
       name="bot_name" 
-      options={@bots |> Map.keys() |> Enum.map(fn b -> (b in @active_bots) && "#{b} *" || b end)}
+      options={@bots |> Enum.map(fn b -> (b in @active_bots) && "#{b} *" || b end)}
       value={@current_bot[:name]} small={true}
       class="!bg-purple-100 !rounded" container-class="bg-purple-800 py-4 px-2"/>
     </form>
@@ -48,21 +48,22 @@
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class={[@current_bot[:changed] && "animate-color" || "", "float-right"]} type="button" 
-      phx-click="save-bot" icon="folder-arrow-down-solid"  keyb="F2">
-      Save
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
       class="float-right" type="button" phx-click="view-bot" icon="credit-card-solid" keyb="F3">
       View bot
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
+      class={[@current_bot[:changed] && "animate-color" || "", "float-right"]} type="button" 
+      phx-click="save-bot" icon="folder-arrow-down-solid"  keyb="F2">
+      Save
+    </.small_button>
+
+<!-- 
+    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
       class="float-right" type="button" phx-click="compile-bot" icon="cpu-chip-solid" keyb="F9">
       Compile
     </.small_button>
-
+-->
 </header>
 
 <main class="relative flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
